# PawGuardians

./: README.md
contract/: Cargo.toml
contract/.stellar/identity/: test-hesap.toml
contract/src/: lib.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  talwind.config.js
frontend/app/assets/: logo.png:Zone.Identifier
frontend/types/: freighter-api.d.ts
