[package]
name = "street-animals-contract"
version = "0.1.0"
edition = "2021"
authors = ["Sokak Dostları Ekibi <info@sokakdostlari.com>"]
description = "Stellar Soroban akıllı sözleşmesi - Sokak hayvanları için merkeziyetsiz fonlama platformu"
license = "MIT"
repository = "https://github.com/sokakdostlari/street-animals-dapp"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true